--- a/publisher/index.html
+++ b/publisher/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title>Publicar a datamx.io</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <h1>Generador de datos aleatorios de choques</h1>
-    <a class="publish button" href="#">Publicar datos</a>
+    <a class="publish button button-blue" href="#">Publicar</a>
+    <div class="log">
+    </div>
     <script src="http://code.jquery.com/jquery-2.1.0.min.js" type="text/javascript"></script>
     <script src="publish.js" type="text/javascript"></script>
   </body>
